# itsgassesment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
agent_workspace/: error.txt
data/: itsg33_controls.json  itsg33_controls_bilingual.json  profiles.json
docs/: QUICKSTART.md  USER_GUIDE.md
scripts/: run_assessment.py  setup_knowledge_base.py  start_mcp_servers.sh
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  control_mapper.py  evidence_assessor.py  gap_analyzer.py  report_generator.py
src/coordinator/: __init__.py  agent.py  config.py
src/mcp_servers/: __init__.py
src/mcp_servers/control_mapper/: __init__.py  server.py  tools.py
src/mcp_servers/evidence_assessor/: __init__.py  server.py  tools.py
src/mcp_servers/gap_analyzer/: __init__.py  server.py  tools.py
src/mcp_servers/knowledge_base/: __init__.py  server.py  tools.py
src/mcp_servers/report_generator/: __init__.py  server.py  tools.py
src/models/: __init__.py  assessment.py  controls.py  evidence.py
src/utils/: __init__.py  auth.py  document_parser.py  gemini_client.py  localizer.py  storage.py  word_generator.py
static/: index.html
tests/: __init__.py  test_agents.py  test_integration.py  test_mcp_servers.py
